--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Image Processing"
+    "# Basic Image Processing"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing images to .png: 100%|██████████| 114/114 [00:00<00:00, 170.74it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convert_images_to_png(source_folder):\n",
     "    if not os.path.exists(source_folder):\n",
@@ -118,17 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Images: 100%|██████████| 111/111 [00:03<00:00, 30.88it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def remove_black_bars(image):\n",
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
@@ -178,17 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Evaluating Images: 100%|██████████| 37/37 [00:05<00:00,  6.96it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "current_folder = os.getcwd()\n",
     "\n",
@@ -478,12 +454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Location of folder along with caption files in a .txt format\n",
-    "folder_loc = ''\n",
+    "folder_loc = r''\n",
     "\n",
     "# Maximum count of words to show in \"most used words\"\n",
     "max_word_count = 100\n",
@@ -543,12 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add to this list\n",
-    "words_to_delete_list = ['photo_\\\\(medium\\\\)', '3d', 'blurry', 'blur']"
+    "words_to_delete_list = ['photo_\\\\(medium\\\\)', '3d', 'blurry', 'blur',]"
    ]
   },
   {
@@ -603,23 +579,6 @@
     "                \n",
     "                with open(file_path, 'w', encoding='utf-8') as file:\n",
     "                    file.write(updated_content)\n",
-    "\n",
-    "        # Convert images to PNG\n",
-    "        # elif os.path.isfile(file_path):\n",
-    "        #     # Temporarily construct the output file path with a .png extension\n",
-    "        #     temp_output_file_path = os.path.splitext(file_path)[0] + '_temp.png'\n",
-    "            \n",
-    "        #     # Open and convert the image to PNG\n",
-    "        #     try:\n",
-    "        #         with Image.open(file_path) as img:\n",
-    "        #             img.save(temp_output_file_path, 'PNG')\n",
-    "                \n",
-    "        #         os.remove(file_path)\n",
-    "        #         os.rename(temp_output_file_path, os.path.splitext(file_path)[0] + '.png')\n",
-    "        #         # print(f\"Converted and replaced {filename} with PNG.\")\n",
-    "        #     except IOError:\n",
-    "        #         print(f\"Skipping {filename}, not an image file.\")\n",
-    "    print(\"Finished\")\n",
     "\n",
     "process_files(folder_loc)"
    ]
