--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -408,19 +408,17 @@
     "            itr += 1\n",
     "            file_loc = os.path.join(folder_path, i)\n",
     "            if os.path.isfile(file_loc) and imghdr.what(file_loc):\n",
-    "                # print(\"{}/{}\".format(itr, len(files)), i, \": is image file\")\n",
     "                img = cv2.imread(file_loc)\n",
     "                if img is None:\n",
     "                    print(f\"Failed to load image: {i}:\", \"Cause: Empty !\")\n",
     "                    failed_img.append(i)\n",
-    "                    continue  # Skip this file and continue with the next iteration\n",
+    "                    continue\n",
     "                faceCrop(resized_folder_path, i, img, 1, x, y)\n",
     "            elif os.path.isdir(file_loc):\n",
     "                print(i, \": Is a folder\")\n",
     "            else:\n",
     "                print(i, \": Is not a supported Image File\")\n",
     "\n",
-    "    # Clear the output\n",
     "    clear_output(wait=True)\n",
     "\n",
     "    time.sleep(5)\n",
@@ -482,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_most_common_words(folder_path, mc=max_word_count):  # Added mc parameter with a default value\n",
+    "def get_most_common_words(folder_path, mc=max_word_count):\n",
     "    \n",
     "    mc = int(mc)\n",
     "    \n",
@@ -551,7 +549,6 @@
     "             \n",
     "            updated_words = [word for word in words if word not in words_list]\n",
     "            \n",
-    "            # Add the unique word (charName) if not already in content\n",
     "            if charName.lower() not in updated_words:\n",
     "                updated_words.append(charName.lower())\n",
     "            \n",
@@ -563,7 +560,7 @@
     "                # Remove all variations of the unique word\n",
     "                updated_content = pattern.sub('', ' '.join(updated_words)).strip()\n",
     "                \n",
-    "                # Check if the unique word is already at the beginning (considering case sensitivity)\n",
+    "                # Check if the unique word is already at the beginning\n",
     "                if not updated_content.lower().startswith(charName.lower() + ','):\n",
     "                    updated_content = charName + ', ' + updated_content\n",
     "                \n",
