Added Clear VRAM/Removed locations

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_loc = r\"C:\\Users\\parvs\\Downloads\\amber\"\n",
+    "folder_loc = r\"\"\n",
     "\n",
     "# Format for below: Abbreviation_full_form(init value)\n",
     "# Min_Confidence(0.9), Min_Size(0.009) (proportional to image size), Min_SharpeningStat(100), Blur_Threshold(100)\n",
@@ -578,6 +578,13 @@
     "                    file.write(updated_content)\n",
     "\n",
     "process_files(folder_loc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clear VRAM"
    ]
   }
  ],
