Added Clear VRAM module

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -586,6 +586,22 @@
    "source": [
     "## Clear VRAM"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyTorch\n",
+    "import torch\n",
+    "torch.cuda.empty_cache()  # Releases all unoccupied cached memory currently held by the caching allocator\n",
+    "\n",
+    "# CUDA (via Numba)\n",
+    "from numba import cuda\n",
+    "cuda.select_device(0)  # Selects the GPU of ID 0 (change according to your setup)\n",
+    "cuda.close()  # Closes the device, attempting to free all memory allocated"
+   ]
   }
  ],
  "metadata": {
