Fixed the word deletion feature, removed excess code

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,8 +463,7 @@
     "max_word_count = 100\n",
     "\n",
     "# Unique name of character\n",
-    "charName = ''\n",
-    "phrase_to_delete = \", \"+ charName"
+    "charName = ''"
    ]
   },
   {
@@ -491,7 +490,7 @@
     "        if filename.endswith('.txt'):\n",
     "            file_path = os.path.join(folder_path, filename)\n",
     "            with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "                words = file.read().lower().split()\n",
+    "                words = file.read().split(\", \")\n",
     "                for word in words:\n",
     "                    if word not in word_order:\n",
     "                        word_order.append(word)\n",
@@ -517,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,46 +537,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_files(folder_path, words_list=words_to_delete_list, charName=charName, phrase_to_delete=phrase_to_delete):\n",
+    "def process_files(folder_path, words_list=words_to_delete_list, charName=charName):\n",
     "    for filename in tqdm(os.listdir(folder_path), desc=\"Processing Caption Files\"):\n",
     "        file_path = os.path.join(folder_path, filename)\n",
-    "        \n",
     "        if filename.endswith('.txt'):\n",
     "            with open(file_path, 'r', encoding='utf-8') as file:\n",
     "                content = file.read().lower()\n",
-    "                words = content.split()\n",
-    "             \n",
-    "            updated_words = [word for word in words if word not in words_list]\n",
-    "            \n",
-    "            if charName.lower() not in updated_words:\n",
-    "                updated_words.append(charName.lower())\n",
-    "            \n",
-    "            # Use regex to find all case variations of the unique word\n",
-    "            pattern = re.compile(re.escape(charName), re.IGNORECASE)\n",
-    "            found_words = pattern.findall(' '.join(updated_words))\n",
-    "            \n",
-    "            if found_words:\n",
-    "                # Remove all variations of the unique word\n",
-    "                updated_content = pattern.sub('', ' '.join(updated_words)).strip()\n",
-    "                \n",
-    "                # Check if the unique word is already at the beginning\n",
-    "                if not updated_content.lower().startswith(charName.lower() + ','):\n",
-    "                    updated_content = charName + ', ' + updated_content\n",
-    "                \n",
-    "                updated_content += ', ' + charName\n",
-    "                \n",
-    "                # Clean up extra commas and blank entries\n",
-    "                updated_content = re.sub(r',\\s*,', ', ', updated_content)  # Replace multiple commas with a single one\n",
-    "                updated_content = re.sub(r'^,\\s*', '', updated_content)  # Remove leading commas\n",
-    "                updated_content = re.sub(r'\\s*,\\s*$', '', updated_content)  # Remove trailing commas\n",
-    "                updated_content = re.sub(r',\\s+', ', ', updated_content)  # Remove blanks between commas\n",
-    "                \n",
-    "                updated_content = updated_content.replace(phrase_to_delete, '')\n",
-    "                \n",
-    "                with open(file_path, 'w', encoding='utf-8') as file:\n",
-    "                    file.write(updated_content)\n",
+    "                words = content.split(\", \")\n",
+    "                # print(\"\\n\", words)\n",
     "\n",
-    "process_files(folder_loc)"
+    "            # Create a new list without the words to delete\n",
+    "            updated_words = [word for word in words if word not in words_list]\n",
+    "\n",
+    "            # Add UniqueWord to the first of the list if not exist\n",
+    "            if words[0] != charName:\n",
+    "                # print(words[0].lower())\n",
+    "                updated_words.insert(0, charName)\n",
+    "\n",
+    "            # Join the updated words back into a string\n",
+    "            updated_content = ', '.join(updated_words)\n",
+    "            # print(\"\\nUpdated:\", updated_content)\n",
+    "\n",
+    "            with open(file_path, 'w', encoding='utf-8') as file:\n",
+    "                file.write(updated_content)\n",
+    "\n",
+    "process_files(folder_loc, words_to_delete_list, charName)"
    ]
   },
   {
