Removed duplicates folder if empty, changed naming method for resized images for easy drag and drop, fixed counting of images with correct usage

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,9 @@
     "x_crop = 512\n",
     "y_crop = 512\n",
     "\n",
-    "detector = dlib.get_frontal_face_detector()"
+    "# Do not touch this\n",
+    "detector = dlib.get_frontal_face_detector()\n",
+    "selected_folder = os.path.join(folder_loc, \"SelectedImages\")"
    ]
   },
   {
@@ -149,6 +151,9 @@
     "            os.rename(file_path, os.path.join(duplicate_images_folder, filename))\n",
     "        else:\n",
     "            image_hashes[hash] = filename\n",
+    "    \n",
+    "    if len([i for i in os.listdir(duplicate_images_folder)]) == 0:\n",
+    "        os.rmdir(duplicate_images_folder)\n",
     "\n",
     "process_images(folder_loc)"
    ]
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,17 +339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DONE !!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "failed_img = []\n",
     "face_failed = []\n",
@@ -390,7 +387,7 @@
     "        # Resize the cropped image to the specified dimensions\n",
     "        cropped = cv2.resize(cropped, (x, y))\n",
     "\n",
-    "        cv2.imwrite(os.path.join(folder_dir, fName + '_cropped' + '.png'), cropped)\n",
+    "        cv2.imwrite(os.path.join(folder_dir, fName + '.png'), cropped)\n",
     "\n",
     "def main_call(folder_path, x=512, y=512):\n",
     "    resized_folder_path = os.path.join(folder_path, \"Cropped_Images\")\n",
@@ -402,9 +399,10 @@
     "    if os.path.isdir(folder_path):\n",
     "        print(\"Valid Folder Location\")\n",
     "        files = os.listdir(folder_path)\n",
-    "        print(\"Number of files: \", len(files))\n",
+    "        files_img = [i for i in files if not i.endswith('.txt') and not os.path.isdir(os.path.join(folder_path, i))]\n",
+    "        print(\"Number of files: \", len(files_img))\n",
     "        itr = 0\n",
-    "        for i in tqdm(files, desc=\"Processing Files\"):\n",
+    "        for i in tqdm(files_img, desc=\"Processing Files\"):\n",
     "            itr += 1\n",
     "            file_loc = os.path.join(folder_path, i)\n",
     "            if os.path.isfile(file_loc) and imghdr.what(file_loc):\n",
@@ -416,16 +414,18 @@
     "                faceCrop(resized_folder_path, i, img, 1, x, y)\n",
     "            elif os.path.isdir(file_loc):\n",
     "                print(i, \": Is a folder\")\n",
+    "            elif i.endswith('.txt'):\n",
+    "                None\n",
     "            else:\n",
     "                print(i, \": Is not a supported Image File\")\n",
     "\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "    time.sleep(5)\n",
-    "\n",
-    "    print(\"DONE !!\")\n",
+    "    # clear_output(wait=True)\n",
     "\n",
     "    time.sleep(3)\n",
+    "\n",
+    "    print(\"Image Cropping Completed\")\n",
+    "\n",
+    "    time.sleep(2)\n",
     "\n",
     "    if len(failed_img) != 0:\n",
     "        print(\"\\nThese images failed: \\nReason: Invalid to load: \\n\", failed_img, \"\\nCount:\", len(failed_img))\n",
