Fixed an issue with saving files as png due to os error; Added extra command for using remBG folder after using remove background

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,15 +90,18 @@
     "    if not os.path.exists(source_folder):\n",
     "        print(f\"The folder {source_folder} does not exist.\")\n",
     "        return\n",
-    "\n",
     "    for filename in tqdm(os.listdir(source_folder), desc = \"Processing images to .png\"):\n",
     "        if filename.lower().endswith(('.jpg', '.jpeg', '.bmp', '.gif', '.tiff', '.webp')):\n",
     "            file_path = os.path.join(source_folder, filename)\n",
     "            with Image.open(file_path) as img:\n",
     "                new_filename = os.path.splitext(filename)[0] + '.png'\n",
     "                new_file_path = os.path.join(source_folder, new_filename)\n",
-    "                img.save(new_file_path, 'PNG')\n",
-    "                os.remove(file_path)\n",
+    "                try:\n",
+    "                    img.save(new_file_path, 'PNG')\n",
+    "                    # os.remove(file_path)\n",
+    "                except:\n",
+    "                    img.convert('RGB').save(new_file_path, \"PNG\", optimize=True)\n",
+    "            os.remove(file_path)\n",
     "\n",
     "convert_images_to_png(folder_loc)"
    ]
@@ -288,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +436,11 @@
     "    if len(face_failed) != 0:\n",
     "        print(\"\\nThese images failed: \\nReason: Face not found: \\n\", face_failed, \"\\nCount:\", len(face_failed))\n",
     "\n",
-    "main_call(selected_folder, x_crop, y_crop)"
+    "# --> If didn't use remBG <--\n",
+    "# main_call(selected_folder, x_crop, y_crop)\n",
+    "\n",
+    "# --> If used remBG <--\n",
+    "main_call(os.path.join(selected_folder, \"No_BG\"), x_crop, y_crop)"
    ]
   },
   {
@@ -452,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,12 +523,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add to this list\n",
-    "words_to_delete_list = ['photo_\\\\(medium\\\\)', '3d', 'blurry', 'blur',]"
+    "words_to_delete_list = ['photo_\\\\(medium\\\\)', '3d', 'blurry', 'blur']"
    ]
   },
   {
