Added clearer instructions, Small Image Removal, Top "n" option for Suitability Check, Cropping image to face is much better with a wider view, and a new imp variable letting you zoom out as much as possible within the image

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +54,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -------------------- [Enter the Location of the folder w/files inside it] -------------------\n",
     "folder_loc = r\"\"\n",
+    "\n",
+    "# -------------------- [For Duplicate Image Removal] ------------------------------------------\n",
+    "# This is used to remove images that are much smaller and will only artefact if you use them\n",
+    "# These values: 700, 700, are suggested, you can change it to any \"SQUARE\" size that you want\n",
+    "# Square => x = y\n",
+    "x_thres = 700\n",
+    "y_thres = 700\n",
+    "\n",
+    "# -------------------- [For Suitability Check] ------------------------------------------------\n",
     "\n",
     "# Format for below: Abbreviation_full_form(init value)\n",
     "# Min_Confidence(0.9), Min_Size(0.009) (proportional to image size), Min_SharpeningStat(100), Blur_Threshold(100)\n",
     "mc, ms, mss, bt = 0.9, 0.01, 100, 100\n",
     "\n",
-    "# Face Crop to dimensions x, y\n",
+    "# The best <x> images will be moved to the folder, if you want all, leave it at 0\n",
+    "top_n_img_count = 0\n",
+    "\n",
+    "# -------------------- [For face crop] --------------------------------------------------------\n",
+    "\n",
+    "# Face Crop to dimensions x, y; eg(512, 512)\n",
+    "# IMP: Keep it square to prevent any code from breaking, thanks\n",
     "x_crop = 512\n",
     "y_crop = 512\n",
     "\n",
-    "# Do not touch this\n",
+    "# -------------------- [Do not touch this] ----------------------------------------------------\n",
     "detector = dlib.get_frontal_face_detector()\n",
     "selected_folder = os.path.join(folder_loc, \"SelectedImages\")"
    ]
@@ -77,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert all images to PNG for easier reading"
+    "### Convert all images to PNG for easier reading [Heavily Suggested]"
    ]
   },
   {
@@ -130,10 +146,14 @@
     "        return cropped_image\n",
     "    return image\n",
     "\n",
-    "def process_images(folder_path):\n",
+    "def process_images(folder_path, x, y):\n",
     "    duplicate_images_folder = os.path.join(folder_path, \"Duplicate_Images\")\n",
     "    if not os.path.exists(duplicate_images_folder):\n",
     "        os.makedirs(duplicate_images_folder)\n",
+    "\n",
+    "    small_images_folder = os.path.join(folder_path, \"Small_Images\")\n",
+    "    if not os.path.exists(small_images_folder):\n",
+    "        os.makedirs(small_images_folder)\n",
     "    \n",
     "    image_hashes = {}\n",
     "    files = [f for f in os.listdir(folder_path) if f.endswith(('.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.webp'))]\n",
@@ -146,6 +166,9 @@
     "        image_no_black_bars = remove_black_bars(image)\n",
     "        \n",
     "        pil_image = Image.fromarray(cv2.cvtColor(image_no_black_bars, cv2.COLOR_BGR2RGB))\n",
+    "        h,w = pil_image.size\n",
+    "        # print(filename, \"\\n\",h*w, x*y)            \n",
+    "        \n",
     "        hash = str(imagehash.average_hash(pil_image))\n",
     "        \n",
     "        # Check for duplicates\n",
@@ -154,18 +177,20 @@
     "            os.rename(file_path, os.path.join(duplicate_images_folder, filename))\n",
     "        else:\n",
     "            image_hashes[hash] = filename\n",
+    "            if h*w < x*y:\n",
+    "                os.rename(file_path, os.path.join(small_images_folder, filename))\n",
     "    \n",
     "    if len([i for i in os.listdir(duplicate_images_folder)]) == 0:\n",
     "        os.rmdir(duplicate_images_folder)\n",
     "\n",
-    "process_images(folder_loc)"
+    "process_images(folder_loc, x_thres, y_thres)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Checks Images for Suitability Check (Face check, etc)"
+    "### Checks Images for Suitability Check [Now with Top \"x\" Images option]"
    ]
   },
   {
@@ -252,34 +277,49 @@
     "            return cropped_image\n",
     "        return image\n",
     "\n",
-    "    def select_best_images(\n",
-    "            folder_path:str, \n",
-    "            min_confidence:float = 0.9, \n",
-    "            min_size:float = 0.009, \n",
-    "            min_sharpness:float = 100, \n",
-    "            blur_threshold:float = 100\n",
-    "            ):\n",
+    "def select_best_images(\n",
+    "        folder_path:str, \n",
+    "        min_confidence:float = 0.9, \n",
+    "        min_size:float = 0.009, \n",
+    "        min_sharpness:float = 100, \n",
+    "        blur_threshold:float = 100,\n",
+    "        top_n:int = 0\n",
+    "        ):\n",
+    "    \n",
+    "    selected_images_folder = os.path.join(folder_path, \"SelectedImages\")\n",
+    "    if not os.path.exists(selected_images_folder):\n",
+    "        os.makedirs(selected_images_folder)\n",
+    "    \n",
+    "    image_ratings = []  # List to store ratings and file paths\n",
+    "    \n",
+    "    files = [f for f in os.listdir(folder_path) if f.endswith(('.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.webp'))]\n",
+    "    for filename in tqdm(files, desc=\"Evaluating Images\"):\n",
+    "        file_path = os.path.join(folder_path, filename)\n",
+    "        image = cv2.imread(file_path)\n",
+    "        if image is None:\n",
+    "            continue\n",
     "        \n",
-    "        selected_images_folder = os.path.join(folder_path, \"SelectedImages\")\n",
-    "        if not os.path.exists(selected_images_folder):\n",
-    "            os.makedirs(selected_images_folder)\n",
+    "        image_no_black_bars = remove_black_bars(image)\n",
     "        \n",
-    "        files = [f for f in os.listdir(folder_path) if f.endswith(('.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.webp'))]\n",
-    "        for filename in tqdm(files, desc=\"Evaluating Images\"):\n",
-    "            file_path = os.path.join(folder_path, filename)\n",
-    "            image = cv2.imread(file_path)\n",
-    "            if image is None:\n",
-    "                continue\n",
-    "            \n",
-    "            image_no_black_bars = remove_black_bars(image)\n",
-    "            \n",
-    "            faces_detected = detect_faces_and_evaluate(image_no_black_bars, min_confidence, min_size * image_no_black_bars.size, min_sharpness, blur_threshold)\n",
-    "            if len(faces_detected) == 1:\n",
-    "                move(file_path, os.path.join(selected_images_folder, filename))\n",
+    "        faces_detected = detect_faces_and_evaluate(image_no_black_bars, min_confidence, min_size * image_no_black_bars.size, min_sharpness, blur_threshold)\n",
+    "        if faces_detected:\n",
+    "            rating = sum([face[0] + face[1] + face[2] for face in faces_detected]) \n",
+    "            image_ratings.append((rating, file_path))\n",
+    "    \n",
+    "    # Sort images based on ratings\n",
+    "    if top_n == 0:\n",
+    "        top_n = len(files)\n",
+    "    top_images = sorted(image_ratings, key=lambda x: x[0], reverse=True)[:top_n]\n",
+    "    \n",
+    "    for _, top_image_path in top_images:\n",
+    "        filename = os.path.basename(top_image_path)\n",
+    "        move(top_image_path, os.path.join(selected_images_folder, filename))\n",
     "\n",
-    "    select_best_images(folder_loc, mc, ms, mss, bt)\n",
     "\n",
-    "    selected_folder = os.path.join(folder_loc, \"SelectedImages\")"
+    "\n",
+    "select_best_images(folder_loc, mc, ms, mss, bt, top_n_img_count)\n",
+    "\n",
+    "selected_folder = os.path.join(folder_loc, \"SelectedImages\")"
    ]
   },
   {
@@ -291,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,31 +400,52 @@
     "        return\n",
     "\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # getting orignal dimensions\n",
+    "    # print(len(gray), len(gray[0]))\n",
+    "    oh, ow = len(gray), len(gray[0])\n",
     "    faces = detector(gray)\n",
+    "    # print(fName)\n",
+    "    # print(\"original dims:\", ow, oh)\n",
     "    if len(faces) == 0:\n",
-    "        None\n",
-    "        # print(\"--> TO BE ADDED\")\n",
     "        face_failed.append(fName)\n",
     "    else:\n",
-    "        importance = imp\n",
     "        areas = [face.width() * face.height() for face in faces]\n",
     "        max_area_index = np.argmax(areas)\n",
     "        fx, fy, fw, fh = faces[max_area_index].left(), faces[max_area_index].top(), faces[max_area_index].width(), faces[max_area_index].height()\n",
     "\n",
-    "        # Increase the size of the bounding box to include more area around the face\n",
-    "        fx = max(0, fx - fw)\n",
-    "        fy = max(0, fy - fh)\n",
-    "        fw = min(img.shape[1] - fx, fw * 3)\n",
-    "        fh = min(img.shape[0] - fy, fh * 3)\n",
+    "        # Calculate center of the face\n",
+    "        cx, cy = fx + fw // 2, fy + fh // 2\n",
     "\n",
-    "        # Crop the largest possible square within the bounding box\n",
-    "        if fw > fh:\n",
-    "            fx += (fw - fh) // 2\n",
-    "            fw = fh\n",
-    "        else:\n",
-    "            fy += (fh - fw) // 2\n",
-    "            fh = fw\n",
+    "        # print(\"old: \", fw, fh)\n",
+    "        fw, fh = int(fw * imp), int(fh * imp)\n",
+    "        # print(\"new: \", fw, fh)\n",
+    "        if min(fw, fh) > min(ow, oh):\n",
+    "            fw = int(min(ow, oh))\n",
+    "            fh = int(min(ow, oh))\n",
+    "            # print(\"fixed dims:\", fw, fh)\n",
+    "        # fw, fh = min(ow, oh), min(ow, oh)\n",
+    "        # print(\"updated: \", fw, fh)\n",
     "\n",
+    "        # Determine the size of the square bounding box\n",
+    "        max_dim = max(fw, fh)\n",
+    "        half_dim = max_dim // 2\n",
+    "\n",
+    "        # Calculate new top-left corner coordinates\n",
+    "        fx = cx - half_dim\n",
+    "        fy = cy - half_dim\n",
+    "\n",
+    "        # Ensure the bounding box stays within image bounds\n",
+    "        fx = max(0, fx)\n",
+    "        fy = max(0, fy)\n",
+    "        # fw = min(img.shape[1] - fx, max_dim)\n",
+    "        # fh = min(img.shape[0] - fy, max_dim)\n",
+    "        fw = min(img.shape[1] - fx, img.shape[0] - fy)\n",
+    "        fh = min(img.shape[1] - fx, img.shape[0] - fy)\n",
+    "\n",
+    "        # print(\"Remade dims:\", fw, fh)\n",
+    "\n",
+    "        # Crop the square bounding box\n",
     "        cropped = img[fy:fy+fh, fx:fx+fw]\n",
     "\n",
     "        # Resize the cropped image to the specified dimensions\n",
@@ -392,7 +453,7 @@
     "\n",
     "        cv2.imwrite(os.path.join(folder_dir, fName + '.png'), cropped)\n",
     "\n",
-    "def main_call(folder_path, x=512, y=512):\n",
+    "def main_call(folder_path, x=512, y=512, imp = 1):\n",
     "    resized_folder_path = os.path.join(folder_path, \"Cropped_Images\")\n",
     "    \n",
     "    if not os.path.exists(resized_folder_path):\n",
@@ -414,7 +475,8 @@
     "                    print(f\"Failed to load image: {i}:\", \"Cause: Empty !\")\n",
     "                    failed_img.append(i)\n",
     "                    continue\n",
-    "                faceCrop(resized_folder_path, i, img, 1, x, y)\n",
+    "                else:\n",
+    "                    faceCrop(resized_folder_path, i, img, imp, x, y)\n",
     "            elif os.path.isdir(file_loc):\n",
     "                print(i, \": Is a folder\")\n",
     "            elif i.endswith('.txt'):\n",
@@ -436,11 +498,100 @@
     "    if len(face_failed) != 0:\n",
     "        print(\"\\nThese images failed: \\nReason: Face not found: \\n\", face_failed, \"\\nCount:\", len(face_failed))\n",
     "\n",
-    "# --> If didn't use remBG <--\n",
+    "# --------------------> If didn't use remBG <--------------------\n",
     "# main_call(selected_folder, x_crop, y_crop)\n",
     "\n",
-    "# --> If used remBG <--\n",
-    "main_call(os.path.join(selected_folder, \"No_BG\"), x_crop, y_crop)"
+    "# --------------------> If you do use remBG <--------------------\n",
+    "# IMP is a variable that allows the cropping boundary to increase by img_size*imp, suggested: imp = 2\n",
+    "main_call(selected_folder, x_crop, y_crop, imp = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [IN WORK] [DO NOT RUN THIS BLOCK] Crop X BEST Images to face, rest zoomed out body crop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def more_face_crop(folder_dir, fName, img, x=512, y=512):\n",
+    "#     detector = dlib.get_frontal_face_detector()\n",
+    "#     _, ext = os.path.splitext(fName)\n",
+    "    \n",
+    "#     fName = fName.split(\".\")[0]\n",
+    "#     if ext.lower() not in ['.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.webp']:\n",
+    "#         print(f\"Unsupported image format: {ext}\")\n",
+    "#         failed_img.append(fName)\n",
+    "#         return\n",
+    "#     gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "#     faces = detector(gray)\n",
+    "#     print(faces)\n",
+    "#     if len(faces) == 0:\n",
+    "#         None\n",
+    "#         # print(\"--> TO BE ADDED\")\n",
+    "#         face_failed.append(fName)\n",
+    "#     else:\n",
+    "#         # Calculate the maximum bounding box around all detected faces\n",
+    "#         fx_min, fy_min, fw_max, fh_max = float('inf'), float('inf'), x, y\n",
+    "#         for face in faces:\n",
+    "#             fx, fy, fw, fh = face.left(), face.top(), face.width(), face.height()\n",
+    "#             print(fx_min, fy_min, fw_max, fh_max)\n",
+    "#             print(fx, fy, fw, fh)\n",
+    "\n",
+    "#             cv2.rectangle(img, (fx, fy), (fx + fw, fy + fh), (255, 0, 0), 2)\n",
+    "\n",
+    "#             cropped_p = Image.fromarray(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
+    "#             cropped_p.show()\n",
+    "\n",
+    "#             fx_min = min(fx_min, fx)\n",
+    "#             fy_min = min(fy_min, fy)\n",
+    "#             fw_max = max(fw_max, fx + fw)\n",
+    "#             fh_max = max(fh_max, fy + fh)\n",
+    "\n",
+    "#             cv2.rectangle(img, (fx, fy), (fx + fw, fy + fh), (0, 255, 0), 2)\n",
+    "\n",
+    "#             cropped_p = Image.fromarray(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
+    "#             cropped_p.show()\n",
+    "\n",
+    "#         # Create a square bounding box with top aligned to the topmost area of the head\n",
+    "#         side_length = max(fw_max - fx_min, fh_max - fy_min)\n",
+    "#         cx = (fx_min + fw_max) // 2\n",
+    "#         cy = fy_min + 10  # Add a 10-pixel gap\n",
+    "#         fx = cx - side_length // 2\n",
+    "#         fy = cy - side_length // 2\n",
+    "#         fw = side_length\n",
+    "#         fh = side_length\n",
+    "\n",
+    "#         # Crop the image to the square bounding box\n",
+    "#         # cropped = img[fy:fy+fh, fx:fx+fw]\n",
+    "#         cv2.rectangle(img, (fx, fy), (fx + fw, fy + fh), (0, 0, 255), 2)\n",
+    "\n",
+    "#         # Resize the cropped image to the specified dimensions\n",
+    "#         # cropped = cv2.resize(cropped, (x, y))\n",
+    "#         # cv2.imshow(\"img\", cropped)\n",
+    "#         cropped_p = Image.fromarray(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
+    "#         cropped_p.show()\n",
+    "                                    \n",
+    "\n",
+    "#         # cv2.imwrite(os.path.join(folder_dir, fName + '.png'), cropped)\n",
+    "    \n",
+    "# def main_callX(folder_loc, x, y):\n",
+    "#     file_loc = r\"C:\\Users\\parvs\\Downloads\\Alia\\SelectedImages\\SelectedImages\\605804587387098720.png\"\n",
+    "#     fName = r\"605804587387098720.png\"\n",
+    "#     if os.path.isfile(file_loc) and imghdr.what(file_loc):\n",
+    "#             img = cv2.imread(file_loc)\n",
+    "#             if img is None:\n",
+    "#                 print(f\"Failed to load image:\", \"Cause: Empty !\")\n",
+    "#                 # failed_img.append(i)\n",
+    "#             more_face_crop(folder_loc, fName, img, x, y)\n",
+    "\n",
+    "# # Example usage:\n",
+    "# main_callX(r\"C:\\Users\\parvs\\Downloads\\Alia\\SelectedImages\\SelectedImages\", 512, 512)"
    ]
   },
   {
