Updated name insert logic

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
     "            updated_words = [word for word in words if word not in words_list]\n",
     "\n",
     "            # Add UniqueWord to the first of the list if not exist\n",
-    "            if words[0] != charName:\n",
+    "            if words[0] != charName.lower() or words[0] != charName:\n",
     "                # print(words[0].lower())\n",
     "                updated_words.insert(0, charName)\n",
     "\n",
