Fixed folder location for Cropping, added imp variable,

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -499,11 +499,11 @@
     "        print(\"\\nThese images failed: \\nReason: Face not found: \\n\", face_failed, \"\\nCount:\", len(face_failed))\n",
     "\n",
     "# --------------------> If didn't use remBG <--------------------\n",
-    "# main_call(selected_folder, x_crop, y_crop)\n",
+    "# main_call(selected_folder, x_crop, y_crop, imp = 2)\n",
     "\n",
     "# --------------------> If you do use remBG <--------------------\n",
     "# IMP is a variable that allows the cropping boundary to increase by img_size*imp, suggested: imp = 2\n",
-    "main_call(selected_folder, x_crop, y_crop, imp = 2)"
+    "main_call(os.path.join(selected_folder, \"No_BG\"), x_crop, y_crop, imp = 2)"
    ]
   },
   {
