Improved face crop centering

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -392,7 +392,6 @@
     "def faceCrop(folder_dir, fName, img, imp=1, x=512, y=512):\n",
     "    detector = dlib.get_frontal_face_detector()\n",
     "    _, ext = os.path.splitext(fName)\n",
-    "    \n",
     "    fName = fName.split(\".\")[0]\n",
     "    if ext.lower() not in ['.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.webp']:\n",
     "        print(f\"Unsupported image format: {ext}\")\n",
@@ -400,13 +399,8 @@
     "        return\n",
     "\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "    # getting orignal dimensions\n",
-    "    # print(len(gray), len(gray[0]))\n",
     "    oh, ow = len(gray), len(gray[0])\n",
     "    faces = detector(gray)\n",
-    "    # print(fName)\n",
-    "    # print(\"original dims:\", ow, oh)\n",
     "    if len(faces) == 0:\n",
     "        face_failed.append(fName)\n",
     "    else:\n",
@@ -417,15 +411,13 @@
     "        # Calculate center of the face\n",
     "        cx, cy = fx + fw // 2, fy + fh // 2\n",
     "\n",
-    "        # print(\"old: \", fw, fh)\n",
+    "        # Increase the size of the face bounding box by imp factor\n",
     "        fw, fh = int(fw * imp), int(fh * imp)\n",
-    "        # print(\"new: \", fw, fh)\n",
+    "\n",
+    "        # Ensure the bounding box dimensions do not exceed image dimensions\n",
     "        if min(fw, fh) > min(ow, oh):\n",
     "            fw = int(min(ow, oh))\n",
     "            fh = int(min(ow, oh))\n",
-    "            # print(\"fixed dims:\", fw, fh)\n",
-    "        # fw, fh = min(ow, oh), min(ow, oh)\n",
-    "        # print(\"updated: \", fw, fh)\n",
     "\n",
     "        # Determine the size of the square bounding box\n",
     "        max_dim = max(fw, fh)\n",
@@ -438,12 +430,8 @@
     "        # Ensure the bounding box stays within image bounds\n",
     "        fx = max(0, fx)\n",
     "        fy = max(0, fy)\n",
-    "        # fw = min(img.shape[1] - fx, max_dim)\n",
-    "        # fh = min(img.shape[0] - fy, max_dim)\n",
     "        fw = min(img.shape[1] - fx, img.shape[0] - fy)\n",
     "        fh = min(img.shape[1] - fx, img.shape[0] - fy)\n",
-    "\n",
-    "        # print(\"Remade dims:\", fw, fh)\n",
     "\n",
     "        # Crop the square bounding box\n",
     "        cropped = img[fy:fy+fh, fx:fx+fw]\n",
